--- a/.github/workflows/youtube-bot.yml
+++ b/.github/workflows/youtube-bot.yml
@@ -2,8 +2,9 @@ name: YouTube Auto-Comment Bot
 
 on:
   schedule:
-    # Run every 12 hours
-    - cron: '0 */12 * * *'
+    # Run at 6 AM and 6 PM Eastern Time (UTC-4/5)
+    # 10:00 UTC and 22:00 UTC (to account for daylight saving time)
+    - cron: '0 10,22 * * *'
   workflow_dispatch:
     # Allow manual triggering
 
@@ -13,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -33,43 +36,74 @@ jobs:
 
       - name: Create channel IDs file
         run: |
-          # Create the file with proper newlines for each channel
-          echo "${{ secrets.YOUTUBE_CHANNEL_IDS }}" | tr ',' '\n' > channel_ids.txt
+          if [ ! -f "channel_ids.txt" ] || [ ! -s "channel_ids.txt" ]; then
+            if [ -n "${{ secrets.YOUTUBE_CHANNEL_IDS }}" ]; then
+              echo "${{ secrets.YOUTUBE_CHANNEL_IDS }}" | tr ',' '\n' > channel_ids.txt
+            else
+              # Use default channel IDs from the repo if they exist
+              touch channel_ids.txt
+            fi
+          fi
 
-      - name: Create comments file if not exists
+      - name: Create comments file
         run: |
-          if [ ! -f "comments.txt" ]; then
-            echo "${{ secrets.YOUTUBE_COMMENTS }}" > comments.txt
+          if [ ! -f "comments.txt" ] || [ ! -s "comments.txt" ]; then
+            if [ -n "${{ secrets.YOUTUBE_COMMENTS }}" ]; then
+              echo "${{ secrets.YOUTUBE_COMMENTS }}" > comments.txt
+            else
+              # Create default comments if none exist
+              echo -e "Great video!\nVery informative content!\nThanks for sharing!" > comments.txt
+            fi
+          fi
+
+      - name: Create posted_videos file if not exists
+        run: |
+          if [ ! -f "posted_videos.txt" ]; then
+            touch posted_videos.txt
           fi
 
       - name: Restore token pickle
-        if: ${{ hashFiles('token.pickle') == '' }}
         run: |
-          echo "${{ secrets.YOUTUBE_TOKEN_PICKLE }}" | base64 -d > token.pickle
+          if [ ! -f "token.pickle" ] || [ ! -s "token.pickle" ]; then
+            if [ -n "${{ secrets.YOUTUBE_TOKEN_PICKLE }}" ]; then
+              echo "${{ secrets.YOUTUBE_TOKEN_PICKLE }}" | base64 -d > token.pickle
+            elif [ -f "token_base64.txt" ] && [ -s "token_base64.txt" ]; then
+              cat token_base64.txt | base64 -d > token.pickle
+            fi
+          fi
         continue-on-error: true
 
       - name: Run YouTube bot
         run: python main.py --run-once
+        id: run_bot
 
       - name: Save token pickle
-        if: ${{ success() }}
+        if: success()
         run: |
-          TOKEN_PICKLE=$(base64 -w 0 token.pickle)
-          echo "::add-mask::$TOKEN_PICKLE"
-          echo "TOKEN_PICKLE=$TOKEN_PICKLE" >> $GITHUB_ENV
+          if [ -f "token.pickle" ] && [ -s "token.pickle" ]; then
+            TOKEN_PICKLE=$(base64 -w 0 token.pickle)
+            echo "::add-mask::$TOKEN_PICKLE"
+            echo "TOKEN_PICKLE=$TOKEN_PICKLE" >> $GITHUB_ENV
+            echo "$TOKEN_PICKLE" > token_base64.txt
+            echo "Token pickle saved to token_base64.txt"
+          fi
 
-      - name: Update token secret
-        if: ${{ success() && env.TOKEN_PICKLE != '' }}
+      - name: Commit changes
+        if: success()
         run: |
-          echo "${{ env.TOKEN_PICKLE }}" > token_base64.txt
-          echo "Token pickle saved to token_base64.txt"
-          echo "Please manually update the YOUTUBE_TOKEN_PICKLE secret with this content if needed"
-
-      - name: Commit posted videos
-        if: ${{ success() }}
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add posted_videos.txt token_base64.txt
-          git commit -m "Update posted videos list and token" || echo "No changes to commit"
-          git push 
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Actions"
+          
+          # Check if there are changes to commit
+          if git status --porcelain | grep -q "posted_videos.txt\|token_base64.txt"; then
+            git add posted_videos.txt token_base64.txt
+            git commit -m "Update posted videos list and token [skip ci]"
+            
+            # Set up authentication for pushing
+            git remote set-url origin https://x-access-token:${{ github.token }}@github.com/${{ github.repository }}
+            
+            # Push changes
+            git push
+          else
+            echo "No changes to commit"
+          fi 
